--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <img class="logo" src="./img/Logo.png" alt="Logo di Boolean">
+        <h1 class="logo title">Toboolist</h1>
+    </header>
     <div class="container">
         <main>
             <!-- buttons -->
