--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <div class="container">
         <main>
             <!-- buttons -->
-            <section></section>
+            <section class="buttons-section">
+                <button class="task-adder">Add Task</button>
+                <button class="section-adder">Add Section</button>
+            </section>
+            <hr>
             <!-- list -->
             <section></section>
         </main>
