WIP: to-do-list

--- a/index.html
+++ b/index.html
@@ -17,12 +17,40 @@
         <main>
             <!-- buttons -->
             <section class="buttons-section">
-                <button class="task-adder">Add Task</button>
-                <button class="section-adder">Add Section</button>
+                <button class="task-adder button">Add Task</button>
+                <button class="section-adder button">Add Section</button>
             </section>
             <hr>
             <!-- list -->
-            <section></section>
+            <section class="to-do-list">
+                <ul>
+                    <li class="task-type"><span>&#128899</span>
+                        <h2>New Task</h2>
+                        <ul>
+                            <li class="task">Quarterly Newsletter</li>
+                        </ul>
+                    </li>
+                    <li class="task-type"><span>&#128899</span>
+                        <h2>Today</h2>
+                        <ul>
+                            <li class="task">Recruiting blog post</li>
+                            <li class="task">Mobile app launch</li>
+                            <li class="task">Interview John H.</li>
+                            <li class="task">Summit update to mobile storefronts</li>
+                        </ul>
+                    </li>
+                    <li class="task-type">
+                        <ul><span>&#128899</span>
+                            <h2>Upcoming</h2>
+                            <li class="task">Schedule meeting with Alex</li>
+                            <li class="task">Homepage refresh</li>
+                            <li class="task">Onboard new Sales team members</li>
+                            <li class="task">Review editorial Calendar</li>
+                        </ul>
+                    </li>
+                </ul>
+
+            </section>
         </main>
     </div>
 </body>
