--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -24,31 +30,42 @@
             <!-- list -->
             <section class="to-do-list">
                 <ul>
-                    <li class="task-type"><span>&#128899</span>
+                    <li class="task-title"><span>&#128899</span>
                         <h2>New Task</h2>
                         <ul>
-                            <li class="task">Quarterly Newsletter</li>
+                            <li class="task"><span class="completed check">&#10004</span> Quarterly Newsletter <span
+                                    class="task-type editorial">Editorial</span></li>
                         </ul>
                     </li>
-                    <li class="task-type"><span>&#128899</span>
+                    <li class="task-title"><span>&#128899</span>
                         <h2>Today</h2>
                         <ul>
-                            <li class="task">Recruiting blog post</li>
-                            <li class="task">Mobile app launch</li>
-                            <li class="task">Interview John H.</li>
-                            <li class="task">Summit update to mobile storefronts</li>
+                            <li class="task"><span class="completed check">&#10004</span> Recruiting blog post <span
+                                    class="task-type editorial">Editorial</span></li>
+                            <li class="task"><span class="completed check">&#10004</span> Mobile app launch <span
+                                    class="task-type goals">Q1 Goals</span></li>
+                            <li class="task"><span class="uncompleted check">&#10005</span> Interview John H. <span
+                                    class="task-type recruiting">Recruiting</span></li>
+                            <li class="task"><span class="completed check">&#10004</span> Summit update to mobile
+                                storefronts <span class="task-type mobile">Mobile</span></li>
                         </ul>
                     </li>
-                    <li class="task-type">
+                    <li class="task-title">
                         <ul><span>&#128899</span>
                             <h2>Upcoming</h2>
-                            <li class="task">Schedule meeting with Alex</li>
-                            <li class="task">Homepage refresh</li>
-                            <li class="task">Onboard new Sales team members</li>
-                            <li class="task">Review editorial Calendar</li>
+                            <li class="task"><span class="uncompleted check">&#10005</span> Schedule meeting with Alex
+                            </li>
+                            <li class="task"><span class="completed check">&#10004</span> Homepage refresh <span
+                                    class="task-type website">Website</span></li>
+                            <li class="task"><span class="completed check">&#10004</span> Onboard new Sales team members
+                                <span class="task-type sales">Sales</span>
+                            </li>
+                            <li class="task"><span class="completed check">&#10004</span> Review editorial Calendar
+                                <span class="task-type editorial">Editorial</span></li>
                         </ul>
                     </li>
                 </ul>
+                <br>
 
             </section>
         </main>
